# buaa_eiri_dual_arm_robot

description/dual_arm_support/: CMakeLists.txt  package.xml
description/dual_arm_support/config/: robot.rviz  urdf.rviz
description/dual_arm_support/launch/: display.launch.py  display_robot.launch.py
description/dual_arm_support/meshes/: base_link.STL  gripper_base_link.STL  left_arm_attachment_point.STL  left_base_link.STL  left_finger.STL  left_link_2.STL  left_link_3.STL  left_link_4.STL  left_link_5.STL  left_link_6.STL  right_arm_attachment_point.STL  right_finger.STL  right_link_1.STL  right_link_2.STL  right_link_3.STL  right_link_4.STL  right_link_5.STL  right_link_6.STL
description/dual_arm_support/meshes/collision/: gripper_base_link.STL  left_base_link.STL  left_link_3.STL  left_link_4.STL  left_link_5.STL  left_link_6.STL  right_base_link.STL  right_link_4.STL  right_link_5.STL
description/dual_arm_support/mjcf/: dual_arm_robot.urdf  dual_arm_robot.xml  dual_arm_support.urdf  dual_arm_support.xml
description/dual_arm_support/urdf/: dual_arm_robot.urdf  dual_arm_robot.urdf.xacro  dual_arm_robot_plug.urdf  dual_arm_support.csv  dual_arm_support.urdf  dual_arm_support.xacro
description/gripper_description/: CMakeLists.txt  package.xml
description/gripper_description/config/: joint_names_gripper_description.yaml  urdf.rviz
description/gripper_description/launch/: display.launch.py
description/gripper_description/meshes/collision/: left_finger.STL  right_finger.STL
description/gripper_description/mjcf/: gripper_description.urdf  gripper_description.xml
description/gripper_description/urdf/: gripper.xacro  gripper_description.csv  gripper_description.urdf
description/left_arm_description/: CMakeLists.txt  package.xml
description/left_arm_description/config/: joint_names_left_arm_description.yaml  urdf.rviz
description/left_arm_description/launch/: display.launch.py
description/left_arm_description/meshes/: left_link_1.STL  left_link_7.STL
description/left_arm_description/meshes/collision/: left_link_1.STL  left_link_2.STL  left_link_7.STL
description/left_arm_description/mjcf/: left_arm_description.urdf  left_arm_description.xml
description/left_arm_description/urdf/: left_arm.xacro  left_arm_description.csv  left_arm_description.urdf
description/right_arm_description/: CMakeLists.txt  package.xml
description/right_arm_description/config/: joint_names_right_arm_description.yaml  urdf.rviz
description/right_arm_description/launch/: display.launch.py
description/right_arm_description/meshes/: right_base_link.STL  right_link_7.STL
description/right_arm_description/meshes/collision/: right_link_1.STL  right_link_2.STL  right_link_3.STL  right_link_6.STL  right_link_7.STL
description/right_arm_description/mjcf/: right_arm_description.urdf  right_arm_description.xml
description/right_arm_description/urdf/: right_arm.xacro  right_arm_description.csv  right_arm_description.urdf
eiriarm_bringup/: CMakeLists.txt  README.md  package.xml
eiriarm_bringup/config/: controllers.yaml
eiriarm_bringup/launch/: controllers.launch.py  mujoco_sim.launch.py  simulation.launch.py  system.launch.py
eiriarm_controllers/: CMakeLists.txt  MANUAL_TEST_STEPS.md  QUICK_REFERENCE.md  README.md  ROS2_CONTROL_MIGRATION_GUIDE.md  TOPIC_BRIDGE_GUIDE.md  eiriarm_controllers.xml  eiriarm_hardware_interface.xml  package.xml
eiriarm_controllers/config/: dual_arm_ros2_control.xacro  joint_impedance.yaml  ros2_control_controllers.yaml
eiriarm_controllers/include/eiriarm_controllers/: eiriarm_dynamics.hpp  gravity_compensation_controller.hpp  joint_impedance_controller_plugin.hpp  topic_based_hardware_interface.hpp
eiriarm_controllers/launch/: dual_arm_with_mujoco.launch.py  gravity_comp_controller.launch.py  joint_impedance_controller.launch.py  ros2_control_example.launch.py  test_topic_bridge.launch.py
eiriarm_controllers/scripts/: send_target_command.py  start_topic_bridge_test.sh  test_topic_bridge.sh
eiriarm_controllers/src/: eiriarm_dynamics.cpp  gravity_comp_controller.cpp  gravity_compensation_controller.cpp  joint_impedance_controller.cpp  joint_impedance_controller_plugin.cpp  topic_based_hardware_interface.cpp
eiriarm_mujoco/: CMakeLists.txt  eiriarm_mujoco_hardware.xml  package.xml
eiriarm_mujoco/config/: simulate.yaml
eiriarm_mujoco/include/eiriarm_mujoco/: mujoco_hardware.hpp  simulate_bridge.hpp
eiriarm_mujoco/scripts/: mujoco_bridge_node.py  print_joint_effort.py
eiriarm_mujoco/src/: mujoco_bridge_node.cpp  mujoco_hardware.cpp  mujoco_simulator_main.cpp  simulate_bridge.cpp
